clusters/vollminlab-cluster/shlink/shlink-web/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink-web
  namespace: shlink
  labels:
    app: shlink-web
    env: production
    category: apps
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://authentik-proxy.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://authentik.vollminlab.com/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    shlink.vollminlab.com/slug: shlink
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shlink.vollminlab.com
      secretName: wildcard-tls
  rules:
    - host: shlink.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink-web
                port:
                  number: 80
